tests/error/new_prim.gw
// [contains] cannot declare/instantiate references (@) of primitive type
new int;
